# device-connect-plugin-driver

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Dockerfile  Dockerfile.sidecar  LICENSE  README.md  SECURITY.md  TODO.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
capabilities/demo/: capability.py  manifest.json
docs/: PUBLISHING.md
examples/: portal-provision.sh
examples/hello-world/: README.md  capability.py  manifest.json
examples/plugin-manifests/: README.md  docker-hello-sidecar.json
examples/plugin-template/: README.md  capability.py  manifest.json
src/device_connect_plugin_driver/: __init__.py  __main__.py  artifact_store.py  authoring.py  concentrator.py  config.py  deploy_cli.py  logging_setup.py  plugin_delivery.py  plugin_dependencies.py  plugin_host.py  plugin_validation.py  remote_client.py  runtime_launcher.py  sidecar.py  sidecar_proxy.py
src/device_connect_plugin_driver/templates/plugin/: README.md  capability.py.tpl  manifest.json.tpl
tests/: conftest.py  test_artifact_store.py  test_authoring.py  test_config.py  test_d2d_loopback.py  test_deploy_cli.py  test_hello_world.py  test_plugin_delivery.py  test_plugin_host.py  test_plugin_host_events.py  test_plugin_validation.py
tests/integration/: conftest.py  loopback_messaging.py  plugin_host_runner.py  test_d2d_plugin_invoke.py
