[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "device-connect-plugin-driver"
version = "0.1.0"
description = "Device Connect plugin enabler — load capabilities over the mesh under one credential"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Eric Van Hensbergen" }]
keywords = ["device-connect", "plugins", "capabilities", "iot", "edge", "zenoh"]
dependencies = [
  "device-connect-edge>=0.2.2",
  "aiohttp>=3.9",
  "pydantic>=2.0",
]

[project.optional-dependencies]
concentrator = [
  "docker>=7.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.8",
]

[project.scripts]
device-connect-plugin-driver = "device_connect_plugin_driver.__main__:main"
dc-plugin-sidecar = "device_connect_plugin_driver.sidecar:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
device_connect_plugin_driver = ["templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/device_connect_plugin_driver/templates"]
